<resources>

    <!--APPLICATION STRINGS-->
    <string name="app_name">App Portfolio</string>
    <string name="action_settings">Settings</string>

    <!--PROJECT HEADER STRINGS-->
    <string name="project_12">Project 1-2</string>
    <string name="project_3">Project 3</string>
    <string name="project_4">Project 4</string>
    <string name="project_5">Project 5</string>
    <string name="project_6">Project 6</string>
    <string name="project_78">Project 7-8</string>

    <!--APPLICATION NAME STRINGS-->
    <string name="an1_2">SPOTIFY STREAMER</string>
    <string name="an3_1">ALEXANDRIA</string>
    <string name="an3_2">FOOTBALL SCORES</string>
    <string name="an4">BUILD IT BIGGER</string>
    <string name="an5">XYZ READER</string>
    <string name="an6">GO UBIQUITOUS</string>
    <string name="an7_8">CAPSTONE</string>

</resources>
