<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/main_activity_layout"
    android:background="@color/bright_foreground_disabled_material_dark">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_activity_scrollview"
        android:layout_gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/main_activity_button_container">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_12"
                android:id="@+id/project_header_12"
                android:layout_marginBottom="4dp"
                android:textColor="@color/project_header_color"
                android:textStyle="bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:id="@+id/project_1_2_container">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/an1_2"
                    android:id="@+id/spotify_app_button"
                    android:background="@color/spotify_streamer_color"
                    android:clickable="true"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_3"
                android:id="@+id/project_header_3"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:textColor="@color/project_header_color" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:id="@+id/project_3_container">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/an3_1"
                    android:id="@+id/library_app_button"
                    android:background="@color/alexandria_color"
                    android:layout_marginRight="5dp"
                    android:clickable="true"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/an3_2"
                    android:id="@+id/football_app_button"
                    android:background="@color/football_scores_color"
                    android:layout_marginRight="5dp"
                    android:clickable="true"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_4"
                android:id="@+id/project_header_4"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:textColor="@color/project_header_color" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp"
                android:id="@+id/project_4_container">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/an4"
                    android:id="@+id/bigger_app_button"
                    android:background="@color/build_it_bigger_color"
                    android:clickable="true"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_5"
                android:id="@+id/project_header_5"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:textColor="@color/project_header_color" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:id="@+id/project_5_container">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/an5"
                    android:id="@+id/xyz_app_button"
                    android:background="@color/xyz_reader_color"
                    android:clickable="true"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_6"
                android:id="@+id/project_header_6"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:textColor="@color/project_header_color" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp"
                android:id="@+id/project_6_container">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/an6"
                    android:id="@+id/wearable_button"
                    android:textColor="@android:color/white"
                    android:clickable="true"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/wearable_color" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_7"
                android:id="@+id/project_header_7"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:textColor="@color/project_header_color" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/project_7_container">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/an7"
                    android:id="@+id/capstone_button"
                    android:background="@color/capstone_color"
                    android:textColor="@android:color/white"
                    android:clickable="true"
                    android:layout_gravity="center" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
